--- a/main/visualization/priority.ipynb
+++ b/main/visualization/priority.ipynb
@@ -136,16 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_group = df.groupby(['device', 'weather_type', 'time', 'priority', 'order']).mean()"
+    "df_group = df.groupby(['device', 'weather_type', 'time', 'priority']).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -169,482 +169,40 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>out</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>device</th>\n",
        "      <th>weather_type</th>\n",
        "      <th>time</th>\n",
        "      <th>priority</th>\n",
        "      <th>order</th>\n",
-       "      <th></th>\n",
+       "      <th>out</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"30\" valign=\"top\">AC</th>\n",
-       "      <th rowspan=\"6\" valign=\"top\">cold</th>\n",
-       "      <th>afternoon</th>\n",
-       "      <th>11</th>\n",
-       "      <th>66</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>early morning</th>\n",
-       "      <th>11</th>\n",
-       "      <th>70</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>evening</th>\n",
-       "      <th>11</th>\n",
-       "      <th>68</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>midnight</th>\n",
-       "      <th>11</th>\n",
-       "      <th>71</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>morning</th>\n",
-       "      <th>11</th>\n",
-       "      <th>67</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>night</th>\n",
-       "      <th>11</th>\n",
-       "      <th>69</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"6\" valign=\"top\">hot</th>\n",
-       "      <th>afternoon</th>\n",
-       "      <th>4</th>\n",
-       "      <th>25</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>early morning</th>\n",
-       "      <th>4</th>\n",
-       "      <th>29</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>evening</th>\n",
-       "      <th>4</th>\n",
-       "      <th>27</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>midnight</th>\n",
-       "      <th>4</th>\n",
-       "      <th>30</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>morning</th>\n",
-       "      <th>4</th>\n",
-       "      <th>26</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>night</th>\n",
-       "      <th>4</th>\n",
-       "      <th>28</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"6\" valign=\"top\">low cold</th>\n",
-       "      <th>afternoon</th>\n",
-       "      <th>8</th>\n",
-       "      <th>48</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>early morning</th>\n",
-       "      <th>8</th>\n",
-       "      <th>52</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>evening</th>\n",
-       "      <th>8</th>\n",
-       "      <th>50</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>midnight</th>\n",
-       "      <th>8</th>\n",
-       "      <th>53</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>morning</th>\n",
-       "      <th>8</th>\n",
-       "      <th>49</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>night</th>\n",
-       "      <th>8</th>\n",
-       "      <th>51</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"6\" valign=\"top\">low hot</th>\n",
-       "      <th>afternoon</th>\n",
-       "      <th>6</th>\n",
-       "      <th>37</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>early morning</th>\n",
-       "      <th>6</th>\n",
-       "      <th>41</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>evening</th>\n",
-       "      <th>6</th>\n",
-       "      <th>39</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>midnight</th>\n",
-       "      <th>6</th>\n",
-       "      <th>42</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>morning</th>\n",
-       "      <th>6</th>\n",
-       "      <th>38</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>night</th>\n",
-       "      <th>6</th>\n",
-       "      <th>40</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"6\" valign=\"top\">very cold</th>\n",
-       "      <th>afternoon</th>\n",
-       "      <th>16</th>\n",
-       "      <th>96</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>early morning</th>\n",
-       "      <th>16</th>\n",
-       "      <th>100</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>evening</th>\n",
-       "      <th>16</th>\n",
-       "      <th>98</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>midnight</th>\n",
-       "      <th>16</th>\n",
-       "      <th>101</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>morning</th>\n",
-       "      <th>16</th>\n",
-       "      <th>97</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>night</th>\n",
-       "      <th>16</th>\n",
-       "      <th>99</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"30\" valign=\"top\">Lights</th>\n",
-       "      <th rowspan=\"6\" valign=\"top\">hot</th>\n",
-       "      <th>afternoon</th>\n",
-       "      <th>17</th>\n",
-       "      <th>103</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>early morning</th>\n",
-       "      <th>10</th>\n",
-       "      <th>61</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>evening</th>\n",
-       "      <th>14</th>\n",
-       "      <th>85</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>midnight</th>\n",
-       "      <th>1</th>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>morning</th>\n",
-       "      <th>13</th>\n",
-       "      <th>79</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>night</th>\n",
-       "      <th>1</th>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"6\" valign=\"top\">low cold</th>\n",
-       "      <th>afternoon</th>\n",
-       "      <th>17</th>\n",
-       "      <th>107</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>early morning</th>\n",
-       "      <th>10</th>\n",
-       "      <th>65</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>evening</th>\n",
-       "      <th>14</th>\n",
-       "      <th>89</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>midnight</th>\n",
-       "      <th>1</th>\n",
-       "      <th>8</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>morning</th>\n",
-       "      <th>13</th>\n",
-       "      <th>83</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>night</th>\n",
-       "      <th>1</th>\n",
        "      <th>7</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"6\" valign=\"top\">low hot</th>\n",
-       "      <th>afternoon</th>\n",
-       "      <th>17</th>\n",
-       "      <th>104</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>early morning</th>\n",
-       "      <th>10</th>\n",
-       "      <th>62</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>evening</th>\n",
-       "      <th>14</th>\n",
-       "      <th>86</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>midnight</th>\n",
-       "      <th>1</th>\n",
-       "      <th>6</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>morning</th>\n",
-       "      <th>13</th>\n",
-       "      <th>80</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>night</th>\n",
-       "      <th>1</th>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"6\" valign=\"top\">very cold</th>\n",
-       "      <th>afternoon</th>\n",
-       "      <th>17</th>\n",
-       "      <th>105</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>early morning</th>\n",
-       "      <th>10</th>\n",
-       "      <th>63</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>evening</th>\n",
-       "      <th>14</th>\n",
-       "      <th>87</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>midnight</th>\n",
-       "      <th>1</th>\n",
-       "      <th>12</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>morning</th>\n",
-       "      <th>13</th>\n",
-       "      <th>81</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>night</th>\n",
-       "      <th>1</th>\n",
-       "      <th>11</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"6\" valign=\"top\">very hot</th>\n",
-       "      <th>afternoon</th>\n",
-       "      <th>17</th>\n",
-       "      <th>102</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>early morning</th>\n",
-       "      <th>10</th>\n",
-       "      <th>60</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>evening</th>\n",
-       "      <th>14</th>\n",
-       "      <th>84</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>midnight</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>morning</th>\n",
-       "      <th>13</th>\n",
-       "      <th>78</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>night</th>\n",
-       "      <th>1</th>\n",
-       "      <th>1</th>\n",
+       "      <td>AC</td>\n",
+       "      <td>cold</td>\n",
+       "      <td>morning</td>\n",
+       "      <td>11</td>\n",
+       "      <td>67</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>108 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                  out\n",
-       "device weather_type time          priority order     \n",
-       "AC     cold         afternoon     11       66       0\n",
-       "                    early morning 11       70       0\n",
-       "                    evening       11       68       0\n",
-       "                    midnight      11       71       0\n",
-       "                    morning       11       67       0\n",
-       "                    night         11       69       0\n",
-       "       hot          afternoon     4        25       0\n",
-       "                    early morning 4        29       0\n",
-       "                    evening       4        27       0\n",
-       "                    midnight      4        30       0\n",
-       "                    morning       4        26       0\n",
-       "                    night         4        28       0\n",
-       "       low cold     afternoon     8        48       0\n",
-       "                    early morning 8        52       0\n",
-       "                    evening       8        50       0\n",
-       "                    midnight      8        53       0\n",
-       "                    morning       8        49       0\n",
-       "                    night         8        51       0\n",
-       "       low hot      afternoon     6        37       0\n",
-       "                    early morning 6        41       0\n",
-       "                    evening       6        39       0\n",
-       "                    midnight      6        42       0\n",
-       "                    morning       6        38       0\n",
-       "                    night         6        40       0\n",
-       "       very cold    afternoon     16       96       0\n",
-       "                    early morning 16       100      0\n",
-       "                    evening       16       98       0\n",
-       "                    midnight      16       101      0\n",
-       "                    morning       16       97       0\n",
-       "                    night         16       99       0\n",
-       "...                                               ...\n",
-       "Lights hot          afternoon     17       103      0\n",
-       "                    early morning 10       61       0\n",
-       "                    evening       14       85       0\n",
-       "                    midnight      1        4        0\n",
-       "                    morning       13       79       0\n",
-       "                    night         1        3        0\n",
-       "       low cold     afternoon     17       107      0\n",
-       "                    early morning 10       65       0\n",
-       "                    evening       14       89       0\n",
-       "                    midnight      1        8        0\n",
-       "                    morning       13       83       0\n",
-       "                    night         1        7        0\n",
-       "       low hot      afternoon     17       104      0\n",
-       "                    early morning 10       62       0\n",
-       "                    evening       14       86       0\n",
-       "                    midnight      1        6        0\n",
-       "                    morning       13       80       0\n",
-       "                    night         1        5        0\n",
-       "       very cold    afternoon     17       105      0\n",
-       "                    early morning 10       63       0\n",
-       "                    evening       14       87       0\n",
-       "                    midnight      1        12       0\n",
-       "                    morning       13       81       0\n",
-       "                    night         1        11       0\n",
-       "       very hot     afternoon     17       102      0\n",
-       "                    early morning 10       60       0\n",
-       "                    evening       14       84       0\n",
-       "                    midnight      1        2        0\n",
-       "                    morning       13       78       0\n",
-       "                    night         1        1        0\n",
-       "\n",
-       "[108 rows x 1 columns]"
+       "  device weather_type     time  priority  order  out\n",
+       "7     AC         cold  morning        11     67    0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_group"
+    "df[(df['device'] == 'AC') & (df['weather_type'] == 'cold') & (df['time'] == 'morning')]"
    ]
   }
  ],
