--- a/main/visualization/total_power_consumption.ipynb
+++ b/main/visualization/total_power_consumption.ipynb
@@ -62,13 +62,13 @@
        "      <th>building</th>\n",
        "      <th>floor</th>\n",
        "      <th>room</th>\n",
-       "      <th>type</th>\n",
-       "      <th>power</th>\n",
+       "      <th>weather_type</th>\n",
        "      <th>date</th>\n",
        "      <th>from_time</th>\n",
        "      <th>to_time</th>\n",
        "      <th>no_of_people</th>\n",
        "      <th>time_stayed_mins</th>\n",
+       "      <th>power</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -78,41 +78,41 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>101</td>\n",
-       "      <td>indoor</td>\n",
-       "      <td>1363</td>\n",
-       "      <td>01-01-2018</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>9</td>\n",
-       "      <td>7</td>\n",
+       "      <td>low cold</td>\n",
+       "      <td>02-01-2018</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1180</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Computer</td>\n",
+       "      <td>AC</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>101</td>\n",
-       "      <td>indoor</td>\n",
-       "      <td>487</td>\n",
-       "      <td>27-01-2018</td>\n",
-       "      <td>08:00:00</td>\n",
-       "      <td>09:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>low cold</td>\n",
+       "      <td>03-01-2018</td>\n",
+       "      <td>20:00:00</td>\n",
+       "      <td>21:00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1959</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Computer</td>\n",
+       "      <td>AC</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>101</td>\n",
-       "      <td>indoor</td>\n",
-       "      <td>464</td>\n",
-       "      <td>29-01-2018</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>06:00:00</td>\n",
+       "      <td>low hot</td>\n",
+       "      <td>04-01-2018</td>\n",
+       "      <td>15:00:00</td>\n",
+       "      <td>16:00:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>16</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1708</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -120,13 +120,13 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>101</td>\n",
-       "      <td>indoor</td>\n",
-       "      <td>389</td>\n",
-       "      <td>30-01-2018</td>\n",
-       "      <td>01:00:00</td>\n",
-       "      <td>02:00:00</td>\n",
-       "      <td>8</td>\n",
-       "      <td>27</td>\n",
+       "      <td>very cold</td>\n",
+       "      <td>27-01-2018</td>\n",
+       "      <td>03:00:00</td>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>9</td>\n",
+       "      <td>29</td>\n",
+       "      <td>339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -134,32 +134,32 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>101</td>\n",
-       "      <td>indoor</td>\n",
-       "      <td>338</td>\n",
-       "      <td>30-01-2018</td>\n",
-       "      <td>08:00:00</td>\n",
-       "      <td>09:00:00</td>\n",
-       "      <td>2</td>\n",
+       "      <td>very hot</td>\n",
+       "      <td>28-01-2018</td>\n",
+       "      <td>22:00:00</td>\n",
+       "      <td>23:00:00</td>\n",
        "      <td>4</td>\n",
+       "      <td>25</td>\n",
+       "      <td>443</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     device  building  floor  room    type  power        date from_time  \\\n",
-       "0        AC         1      1   101  indoor   1363  01-01-2018  04:00:00   \n",
-       "1  Computer         1      1   101  indoor    487  27-01-2018  08:00:00   \n",
-       "2  Computer         1      1   101  indoor    464  29-01-2018  05:00:00   \n",
-       "3  Computer         1      1   101  indoor    389  30-01-2018  01:00:00   \n",
-       "4  Computer         1      1   101  indoor    338  30-01-2018  08:00:00   \n",
+       "     device  building  floor  room weather_type        date from_time  \\\n",
+       "0        AC         1      1   101     low cold  02-01-2018  23:00:00   \n",
+       "1        AC         1      1   101     low cold  03-01-2018  20:00:00   \n",
+       "2        AC         1      1   101      low hot  04-01-2018  15:00:00   \n",
+       "3  Computer         1      1   101    very cold  27-01-2018  03:00:00   \n",
+       "4  Computer         1      1   101     very hot  28-01-2018  22:00:00   \n",
        "\n",
-       "    to_time  no_of_people  time_stayed_mins  \n",
-       "0  05:00:00             9                 7  \n",
-       "1  09:00:00             0                 0  \n",
-       "2  06:00:00             1                16  \n",
-       "3  02:00:00             8                27  \n",
-       "4  09:00:00             2                 4  "
+       "    to_time  no_of_people  time_stayed_mins  power  \n",
+       "0  00:00:00             1                 1   1180  \n",
+       "1  21:00:00             3                11   1959  \n",
+       "2  16:00:00             1                13   1708  \n",
+       "3  04:00:00             9                29    339  \n",
+       "4  23:00:00             4                25    443  "
       ]
      },
      "execution_count": 3,
@@ -211,6 +211,88 @@
     "plt.xlabel('Devices', fontsize=20)\n",
     "plt.ylabel('Power Consumption (W)', fontsize=20)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date        from_time\n",
+       "01-01-2018  00:00:00     11103\n",
+       "            01:00:00      9889\n",
+       "            02:00:00      9150\n",
+       "            03:00:00     10290\n",
+       "            04:00:00      9702\n",
+       "            05:00:00     11044\n",
+       "            06:00:00     10217\n",
+       "            07:00:00     10341\n",
+       "            08:00:00      8722\n",
+       "            09:00:00      8281\n",
+       "            10:00:00     10614\n",
+       "            11:00:00     10308\n",
+       "            12:00:00     10011\n",
+       "            13:00:00      9780\n",
+       "            14:00:00     11068\n",
+       "            15:00:00      9542\n",
+       "            16:00:00     10744\n",
+       "            17:00:00     10836\n",
+       "            18:00:00     10666\n",
+       "            19:00:00      9715\n",
+       "            20:00:00     11051\n",
+       "            21:00:00     10475\n",
+       "            22:00:00      9692\n",
+       "            23:00:00     10235\n",
+       "02-01-2018  00:00:00     12758\n",
+       "            01:00:00     11108\n",
+       "            02:00:00      9188\n",
+       "            03:00:00     11143\n",
+       "            04:00:00     10484\n",
+       "            05:00:00     10724\n",
+       "                         ...  \n",
+       "30-01-2018  18:00:00      2691\n",
+       "            19:00:00      2828\n",
+       "            20:00:00      2885\n",
+       "            21:00:00      2594\n",
+       "            22:00:00      2966\n",
+       "            23:00:00      2660\n",
+       "31-01-2018  00:00:00      2976\n",
+       "            01:00:00      2894\n",
+       "            02:00:00      2902\n",
+       "            03:00:00      2793\n",
+       "            04:00:00      2838\n",
+       "            05:00:00      2820\n",
+       "            06:00:00      2647\n",
+       "            07:00:00      2788\n",
+       "            08:00:00      2589\n",
+       "            09:00:00      2580\n",
+       "            10:00:00      2924\n",
+       "            11:00:00      3025\n",
+       "            12:00:00      2503\n",
+       "            13:00:00      2971\n",
+       "            14:00:00      2643\n",
+       "            15:00:00      2729\n",
+       "            16:00:00      2810\n",
+       "            17:00:00      2994\n",
+       "            18:00:00      3047\n",
+       "            19:00:00      2919\n",
+       "            20:00:00      2937\n",
+       "            21:00:00      2891\n",
+       "            22:00:00      2934\n",
+       "            23:00:00      2847\n",
+       "Name: power, Length: 744, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(['date','from_time']).sum()['power']"
    ]
   }
  ],
