--- a/main/experiment/trial.ipynb
+++ b/main/experiment/trial.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,19 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Dataset\n",
-    "df_home_data_test = pd.read_csv('../../data/home_data_test.csv')\n",
+    "df_home_data_test = pd.read_csv('../../data/home_data_predict.csv')\n",
     "df_home_priority = pd.read_csv('../../data/home_priority.csv')\n",
     "date_time_group = pd.read_csv('../../data/date_time_group.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,6 +70,7 @@
        "      <th>time</th>\n",
        "      <th>no_of_people</th>\n",
        "      <th>time_stayed_mins</th>\n",
+       "      <th>power</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -85,6 +86,7 @@
        "      <td>afternoon</td>\n",
        "      <td>7</td>\n",
        "      <td>27</td>\n",
+       "      <td>1497.122353</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -98,6 +100,7 @@
        "      <td>midnight</td>\n",
        "      <td>11</td>\n",
        "      <td>32</td>\n",
+       "      <td>1418.397340</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -111,6 +114,7 @@
        "      <td>midnight</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1472.697586</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -124,6 +128,7 @@
        "      <td>morning</td>\n",
        "      <td>7</td>\n",
        "      <td>4</td>\n",
+       "      <td>1455.343591</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -137,6 +142,7 @@
        "      <td>evening</td>\n",
        "      <td>2</td>\n",
        "      <td>17</td>\n",
+       "      <td>1505.829679</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -150,15 +156,15 @@
        "3     AC         1   101     very hot  2018-01-03  11:00:00  12:00:00   \n",
        "4     AC         1   101     very hot  2018-01-03  18:00:00  19:00:00   \n",
        "\n",
-       "        time  no_of_people  time_stayed_mins  \n",
-       "0  afternoon             7                27  \n",
-       "1   midnight            11                32  \n",
-       "2   midnight             0                 0  \n",
-       "3    morning             7                 4  \n",
-       "4    evening             2                17  "
+       "        time  no_of_people  time_stayed_mins        power  \n",
+       "0  afternoon             7                27  1497.122353  \n",
+       "1   midnight            11                32  1418.397340  \n",
+       "2   midnight             0                 0  1472.697586  \n",
+       "3    morning             7                 4  1455.343591  \n",
+       "4    evening             2                17  1505.829679  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +260,7 @@
        "4     AC     low cold          night         8     51"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -297,33 +303,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>01-01-2018</td>\n",
+       "      <td>2018-01-01</td>\n",
        "      <td>00:00:00</td>\n",
-       "      <td>10841</td>\n",
+       "      <td>9556</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>01-01-2018</td>\n",
+       "      <td>2018-01-01</td>\n",
        "      <td>01:00:00</td>\n",
-       "      <td>11672</td>\n",
+       "      <td>8512</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>01-01-2018</td>\n",
+       "      <td>2018-01-01</td>\n",
        "      <td>02:00:00</td>\n",
-       "      <td>10856</td>\n",
+       "      <td>10947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>01-01-2018</td>\n",
+       "      <td>2018-01-01</td>\n",
        "      <td>03:00:00</td>\n",
-       "      <td>8587</td>\n",
+       "      <td>12376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>01-01-2018</td>\n",
+       "      <td>2018-01-01</td>\n",
        "      <td>04:00:00</td>\n",
-       "      <td>12275</td>\n",
+       "      <td>10260</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -331,14 +337,14 @@
       ],
       "text/plain": [
        "         date from_time  power\n",
-       "0  01-01-2018  00:00:00  10841\n",
-       "1  01-01-2018  01:00:00  11672\n",
-       "2  01-01-2018  02:00:00  10856\n",
-       "3  01-01-2018  03:00:00   8587\n",
-       "4  01-01-2018  04:00:00  12275"
+       "0  2018-01-01  00:00:00   9556\n",
+       "1  2018-01-01  01:00:00   8512\n",
+       "2  2018-01-01  02:00:00  10947\n",
+       "3  2018-01-01  03:00:00  12376\n",
+       "4  2018-01-01  04:00:00  10260"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,18 +364,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "sample_date = '2018-01-01'\n",
-    "sample_date_format = '01-01-2018'\n",
-    "sample_time = '03:00:00'"
+    "sample_date_format = '18-01-2018'\n",
+    "sample_time = '20:00:00'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,18 +385,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "power = date_time_group[(date_time_group['date'] == sample_date_format) & (date_time_group['from_time'] == sample_time)]\n",
-    "\n",
+    "power = date_time_group[(date_time_group['date'] == sample_date) & (date_time_group['from_time'] == sample_time)]\n",
     "condition = sample_total_power > power['power'][power['power'].index[0]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -437,65 +442,65 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>AC</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1707</td>\n",
+       "      <td>1</td>\n",
+       "      <td>105</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>30</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AC</td>\n",
-       "      <td>31</td>\n",
-       "      <td>3106</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>42</td>\n",
+       "      <td>7</td>\n",
+       "      <td>704</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AC</td>\n",
-       "      <td>33</td>\n",
-       "      <td>3305</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>42</td>\n",
+       "      <td>7</td>\n",
+       "      <td>704</td>\n",
+       "      <td>11</td>\n",
+       "      <td>35</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>AC</td>\n",
-       "      <td>59</td>\n",
-       "      <td>5904</td>\n",
-       "      <td>5</td>\n",
-       "      <td>11</td>\n",
-       "      <td>42</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>AC</td>\n",
-       "      <td>83</td>\n",
-       "      <td>8302</td>\n",
-       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>302</td>\n",
        "      <td>14</td>\n",
-       "      <td>42</td>\n",
+       "      <td>23</td>\n",
+       "      <td>99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>AC</td>\n",
-       "      <td>48</td>\n",
-       "      <td>4803</td>\n",
        "      <td>4</td>\n",
-       "      <td>22</td>\n",
-       "      <td>101</td>\n",
+       "      <td>404</td>\n",
+       "      <td>13</td>\n",
+       "      <td>41</td>\n",
+       "      <td>99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>AC</td>\n",
-       "      <td>85</td>\n",
-       "      <td>8505</td>\n",
-       "      <td>8</td>\n",
-       "      <td>29</td>\n",
-       "      <td>18</td>\n",
+       "      <td>9</td>\n",
+       "      <td>905</td>\n",
+       "      <td>4</td>\n",
+       "      <td>35</td>\n",
+       "      <td>40</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -503,16 +508,16 @@
       ],
       "text/plain": [
        "  device  building  room  no_of_people  time_stayed_mins  order\n",
-       "0     AC        17  1707             0                 0     30\n",
-       "1     AC        31  3106             0                 0     42\n",
-       "2     AC        33  3305             3                 4     42\n",
-       "3     AC        59  5904             5                11     42\n",
-       "4     AC        83  8302             8                14     42\n",
-       "5     AC        48  4803             4                22    101\n",
-       "6     AC        85  8505             8                29     18"
+       "0     AC         1   105             0                 0     16\n",
+       "1     AC         7   704             4                 8     16\n",
+       "2     AC         7   704            11                35     16\n",
+       "3     AC        10  1003             0                 0     16\n",
+       "4     AC         3   302            14                23     99\n",
+       "5     AC         4   404            13                41     99\n",
+       "6     AC         9   905             4                35     40"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
