--- a/predict/multiple_regression.ipynb
+++ b/predict/multiple_regression.ipynb
@@ -322,22 +322,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1497.122352698162"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y_pred[0]"
+    "df['power'] = y_pred\n",
+    "df.to_csv('../data/home_data_predict.csv', index=False)"
    ]
   }
  ],
